# syreto

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  paper.bib  paper.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
02_data/codebook/: extraction_template.csv
02_data/processed/: audit_log.csv  decision_log.csv  full_text_exclusion_reasons.csv  master_records.csv  prisma_counts_template.csv  record_id_map.csv  screening_daily_log.csv  screening_fulltext_log.csv  screening_title_abstract_dual_log.csv  search_log.csv  (+1 more)
03_analysis/: analysis_lineage.py  audit_log_integrity_guard.py  citation_tracker.py  consolidate_title_abstract_consensus.py  daily_run.sh  dedup_merge.py  dedup_stats.py  effect_size_converter.py  epistemic_consistency_guard.py  export_to_ris.py  forest_plot_generator.py  grade_evidence_profiler.py  jbi_to_nos_converter.py  keyword_network.py  latex_utils.py  living_review_scheduler.py  meta_analysis_results_builder.py  multilang_abstract_screener.py  nos_to_jbi_converter.py  polyglot_search.py  priority_policy.json  prisma_adherence_checker.py  prisma_tables.py  progress_history_builder.py  prospero_manual_fields_check.py  prospero_submission_drafter.py  provenance.py  publication_bias_assessment.py  pubmed_fetch.py  python_source_guard.py  quality_appraisal.py  quality_appraisal_roundtrip.py  record_id_map_integrity_guard.py  results_interpretation_layer.py  results_summary_table_builder.py  retraction_checker.py  review_descriptives_builder.py  reviewer_workload_balancer.py  screening_disagreement_analyzer.py  screening_metrics.py  (+13 more)
docs/: architecture-layers.md  artifact-catalog.md  daily-operations.md  execution-contract.md  failure-model.md  golden-review-fixtures.md  integrity-guards.md  migration-story.md  observability-model.md  pipeline-overview.md  provenance-layer.md  recovery-rerun-semantics.md  reproducibility-contract.md  review-analytics-model.md  review-config-schema.md  review-instance-model.md  study-table-model.md  test-taxonomy.md  versioning-policy.md
syreto/: __init__.py  analysis_lineage.py  audit_log_integrity_guard.py  citation_tracker.py  cli.py  consolidate_title_abstract_consensus.py  daily_run.sh  dedup_merge.py  dedup_stats.py  effect_size_converter.py  epistemic_consistency_guard.py  export_to_ris.py  forest_plot_generator.py  grade_evidence_profiler.py  jbi_to_nos_converter.py  keyword_network.py  living_review_scheduler.py  meta_analysis_results_builder.py  multilang_abstract_screener.py  nos_to_jbi_converter.py  polyglot_search.py  priority_policy.json  prisma_adherence_checker.py  prisma_tables.py  progress_history_builder.py  prospero_submission_drafter.py  provenance.py  publication_bias_assessment.py  pubmed_fetch.py  python_source_guard.py  quality_appraisal.py  quality_appraisal_roundtrip.py  record_id_map_integrity_guard.py  results_interpretation_layer.py  results_summary_table_builder.py  retraction_checker.py  review_config.py  review_descriptives_builder.py  reviewer_workload_balancer.py  screening_disagreement_analyzer.py  (+16 more)
(+162 files in other folders)
